[project]
name = "lang-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "google-adk[eval]>=1.25.0",
    "isort>=8.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[tool.isort]
profile = "black"
